Updated clerk class, created password login functionality, started creating the biketransactionchoice view while implementing internationalization

--- a/MessagesBundle_en_US.properties
+++ b/MessagesBundle_en_US.properties
@@ -1,10 +1,10 @@
-greetings = Hello.
-farewell = Goodbye.
-inquiry = How are you?
-loginTitle =        Welcome to Brockport-FastTracks Bicycle Rentals
 userId = User Id :
 password = Password :
 submit = Submit
+brockportTitle = THE COLLEGE AT BROCKPORT
+fastTracksTitle =        FastTracks Bicycle Rentals
+transChoiceSubTitle = RENTAL MANAGEMENT SYSTEM
+greetingTemplate = You are logged in as: {0}({1}). You have {2} credentials.
 enterUserIDErrorMessage = Please enter a user ID!
 
 
