Updated clerk class, created password login functionality, started creating the biketransactionchoice view while implementing internationalization

--- a/MessagesBundle_fr_FR.properties
+++ b/MessagesBundle_fr_FR.properties
@@ -1,4 +1,7 @@
-loginTitle =        French Title
+brockportTitle = (French)THE COLLEGE AT BROCKPORT
+fastTracksTitle =       (French) FastTracks Bicycle Rentals
+transChoiceSubTitle = (French)RENTAL MANAGEMENT SYSTEM
+greetingTemplate = (French)You are logged in as: {0},{1} ({2}). You have {3} credentials.
 userId = French Id :
 password = French Password :
 submit = French Submit
