--- a/MessagesBundle_en_US.properties
+++ b/MessagesBundle_en_US.properties
@@ -1,10 +1,15 @@
 userId = User Id :
 password = Password :
 submit = Submit
+cancel = Cancel
+logout = Log Out
 brockportTitle = THE COLLEGE AT BROCKPORT
-fastTracksTitle =        FastTracks Bicycle Rentals
+fastTracksTitle = FastTracks Bicycle Rentals
 transChoiceSubTitle = RENTAL MANAGEMENT SYSTEM
-greetingTemplate = You are logged in as: {0}({1}). You have {2} credentials.
+greetingTemplate = You are logged in as: {0},{1} ({2}). You have {3} credentials.
 enterUserIDErrorMessage = Please enter a user ID!
+checkinButton = Check In
+checkoutButton = Check Out
+
 
 
