--- a/MessagesBundle_en_US.properties
+++ b/MessagesBundle_en_US.properties
@@ -10,6 +10,14 @@ greetingTemplate = You are logged in as: {0},{1} ({2}). You have {3} credentials
 enterUserIDErrorMessage = Please enter a user ID!
 checkinButton = Check In
 checkoutButton = Check Out
-
-
+AddVehicleTitle = INSERT NEW VEHICLE
+VehicleMake = Make :
+VehicleModelNum = Model Number :
+VehicleSerialNum = Serial Number :
+VehicleColor = Color :
+VehicleDescription = Description :
+VehicleLocation = Location :
+VehiclePhysicalCondition =Physical Condition :
+VehicleStatus = Status :
+VehicleDateStatus = Date of Status Update:
 
