fix US properties file

--- a/BikeRental/src/MessagesBundle_en_US.properties
+++ b/BikeRental/src/MessagesBundle_en_US.properties
@@ -20,4 +20,8 @@ VehicleLocation = Location :
 VehiclePhysicalCondition =Physical Condition :
 VehicleStatus = Status :
 VehicleDateStatus = Date of Status Update:
-
+add = Add
+user = User
+worker = Worker
+bike = Bike
+Find/Modify = Find/Modify
