--- a/BikeRental/src/MessagesBundle_fr_FR.properties
+++ b/BikeRental/src/MessagesBundle_fr_FR.properties
@@ -23,5 +23,5 @@ VehicleDateStatus = Date de mise a jour du status :
 add = Ajouter
 user = Utilisateur
 worker = Employe
-bike = "worker"
+bike = Velo
 Find/Modify = "Chercher/Modifier"
