--- a/BikeRental/src/MessagesBundle_en_US.properties
+++ b/BikeRental/src/MessagesBundle_en_US.properties
@@ -10,6 +10,7 @@ greetingTemplate = You are logged in as: {0},{1} ({2}). You have {3} credentials
 enterUserIDErrorMessage = Please enter a user ID!
 checkinButton = Check In
 checkoutButton = Check Out
+add = Add
 AddVehicleTitle = INSERT NEW VEHICLE
 VehicleMake = Make :
 VehicleModelNum = Model Number :
