--- a/BikeRental/src/MessagesBundle_fr_FR.properties
+++ b/BikeRental/src/MessagesBundle_fr_FR.properties
@@ -4,7 +4,7 @@ submit = Soumetre
 cancel = Quiter
 logout = Deconnexion
 brockportTitle = THE COLLEGE AT BROCKPORT
-fastTracksTitle = Location de Velo
+fastTracksTitle = Location de Velos
 transChoiceSubTitle = Systeme de gestion de location
 greetingTemplate = Vous etes connecte comme {0},{1}. Vous avez les privileges {3}
 enterUserIDErrorMessage = Merci d'entrer un Identifiant
