Started to implement super classes for our views and models. Put common code into those classes.

--- a/BikeRental/src/MessagesBundle_fr_FR.properties
+++ b/BikeRental/src/MessagesBundle_fr_FR.properties
@@ -6,7 +6,7 @@ logout = Deconnexion
 brockportTitle = THE COLLEGE AT BROCKPORT
 fastTracksTitle = Location de Velos
 transChoiceSubTitle = Systeme de gestion de location
-greetingTemplate = Vous etes connecte comme {0},{1}. Vous avez les privileges {3}
+greetingTemplate = Vous etes connecte comme {0},{1} ({2}). Vous avez les privileges {3}
 enterUserIDErrorMessage = Merci d'entrer un Identifiant
 checkinButton = Connexion
 checkoutButton = Deconnexion
