--- a/BikeRental/src/MessagesBundle_en_US.properties
+++ b/BikeRental/src/MessagesBundle_en_US.properties
@@ -6,7 +6,8 @@ logout = Log Out
 brockportTitle = THE COLLEGE AT BROCKPORT
 fastTracksTitle = FastTracks Bicycle Rentals
 transChoiceSubTitle = RENTAL MANAGEMENT SYSTEM
-greetingTemplate = You are logged in as: {0},{1} ({2}). You have {3} credentials.
+AddWorkerTitle = Add New Worker
+greetingTemplate = You are logged in as: {0}, {1} ({2}). You have {3} credentials.
 enterUserIDErrorMessage = Please enter a user ID!
 checkinButton = Check In
 checkoutButton = Check Out
