Added "done" button functionality, only implemented in vehicles screen currently.

--- a/BikeRental/src/MessagesBundle_en_US.properties
+++ b/BikeRental/src/MessagesBundle_en_US.properties
@@ -1,7 +1,7 @@
 userId = User Id :
 password = Password :
 submit = Submit
-cancel = Cancel
+done = Done
 logout = Log Out
 brockportTitle = THE COLLEGE AT BROCKPORT
 fastTracksTitle = FastTracks Bicycle Rentals
