change error messgaes to french

--- a/BikeRental/src/MessagesBundle_en_US.properties
+++ b/BikeRental/src/MessagesBundle_en_US.properties
@@ -27,3 +27,6 @@ user = User
 worker = Worker
 bike = Bike
 Find/Modify = Find/Modify
+passwordMismatch = Error: Password mismatch
+passwordMissing = Error: Password missing
+userNotFound = Error: user does not exist
