--- a/BikeRental/src/MessagesBundle_fr_FR.properties
+++ b/BikeRental/src/MessagesBundle_fr_FR.properties
@@ -1,27 +1,30 @@
 userId = Identifiant
 password = Mot de passe
-submit = Soumetre
-cancel = Quiter
-logout = Deconnexion
+submit = Soumettre
+cancel = Quitter
+logout = Déconnexion
 brockportTitle = THE COLLEGE AT BROCKPORT
-fastTracksTitle = Location de Velos
-transChoiceSubTitle = Systeme de gestion de location
-greetingTemplate = Vous etes connecte comme {0},{1} ({2}). Vous avez les privileges {3}
-enterUserIDErrorMessage = Merci d'entrer un Identifiant
+fastTracksTitle = Location de Vélos
+transChoiceSubTitle = Système de gestion de location
+greetingTemplate = Vous etes connecté comme {0},{1} ({2}). Vous avez les privilèges {3}
+enterUserIDErrorMessage = Merci d'entrer un identifiant
 checkinButton = Connexion
-checkoutButton = Deconnexion
-AddVehicleTitle = Ajouter un vehicule
+checkoutButton = Déconnexion
+AddVehicleTitle = Ajouter un véhicule
 VehicleMake = Marque :
-VehicleModelNum = Numero de modele :
-VehicleSerialNum = Numero de serie :
+VehicleModelNum = Numéro de modele :
+VehicleSerialNum = Numéro de serie :
 VehicleColor = Couleur :
 VehicleDescription = Description :
 VehicleLocation = Location :
-VehiclePhysicalCondition = Etat :
+VehiclePhysicalCondition = État :
 VehicleStatus = Status :
 VehicleDateStatus = Date de mise a jour du status :
 add = Ajouter
 user = Utilisateur
-worker = Employe
-bike = Velo
+worker = Employé
+bike = Vélo
 Find/Modify = "Chercher/Modifier"
+passwordMismatch = Erreur: Mot de passe invalide
+passwordMissing = Erreur: Mot de passe manquant
+userNotFound = Erreur: L'utilisateur n'existe pas
