Started to implement super classes for our views and models. Put common code into those classes.

--- a/BikeRental/src/MessagesBundle_en_US.properties
+++ b/BikeRental/src/MessagesBundle_en_US.properties
@@ -27,3 +27,13 @@ user = User
 worker = Worker
 bike = Bike
 Find/Modify = Find/Modify
+firstName = First Name:
+lastName = Last Name:
+email = Email:
+phone = Phone:
+credential = Credential:
+dateOfInitialReg = Date Of Initial Registration:
+notes = Notes:
+status = Status:
+dateStatusUpdated = Date Status Updated:
+
