Started to implement super classes for our views and models. Put common code into those classes.

--- a/BikeRental/src/MessagesBundle_en_US.properties
+++ b/BikeRental/src/MessagesBundle_en_US.properties
@@ -36,8 +36,15 @@ lastName = Last Name:
 email = Email:
 phone = Phone:
 credential = Credential:
+administrator = Administrator
+password = Password:
 dateOfInitialReg = Date Of Initial Registration:
 notes = Notes:
 status = Status:
+active = Active
+inactive = In-Active
 dateStatusUpdated = Date Status Updated:
-
+enterFirstNameError = Please Enter a First Name.
+enterLastNameError = Please Enter a Last Name.
+enterEmailError = Please Enter an Email Address.
+phoneNumericalError = Phone Field Must be a Numerical Value.
