commit locale for user

--- a/BikeRental/src/MessagesBundle_en_US.properties
+++ b/BikeRental/src/MessagesBundle_en_US.properties
@@ -48,3 +48,12 @@ enterFirstNameError = Please Enter a First Name.
 enterLastNameError = Please Enter a Last Name.
 enterEmailError = Please Enter an Email Address.
 phoneNumericalError = Phone Field Must be a Numerical Value.
+
+
+
+InsertUsers = Insert Users
+userType = User Type
+membershipExpire = Membership Expire Date
+enterUserError = Please enter a User
+userTypeError = Please enter type of user
+membershipExpireError = Please enter expire date
