Worked on worker view and made other changes

--- a/BikeRental/src/MessagesBundle_en_US.properties
+++ b/BikeRental/src/MessagesBundle_en_US.properties
@@ -47,4 +47,12 @@ dateStatusUpdated = Date Status Updated:
 enterFirstNameError = Please Enter a First Name.
 enterLastNameError = Please Enter a Last Name.
 enterEmailError = Please Enter an Email Address.
-phoneNumericalError = Phone Field Must be a Numerical Value.
+phoneFormatError = Please enter a phone number in the format "xxx-xxx-xxxx".
+phoneNumericError = Phone Field Must be a Numerical Value.
+regDateError = Please enter a date of initial registration.
+regDateNumericalError = Date of initial registration must be a numerical value.
+dateYearLengthError = 'Year' field in registration date cannot exceed 4 characters.
+dateMonthLengthError = 'Month' field in date of birth cannot exceed 2 characters.
+dateDayLengthError = 'Day' field in date of birth cannot exceed 2 characters.
+dateMonthRangeError = 'Month' field in date of birth must be between 1 and 12.
+dateDayRangeError = 'Day' field in date of birth must be between 1 - 31.
