Made changes to fix worker view

--- a/BikeRental/src/MessagesBundle_en_US.properties
+++ b/BikeRental/src/MessagesBundle_en_US.properties
@@ -31,6 +31,7 @@ Find/Modify = Find/Modify
 passwordMismatch = Error: Password mismatch
 passwordMissing = Error: Password missing
 userNotFound = Error: user does not exist
+workerId = Worker ID:
 firstName = First Name:
 lastName = Last Name:
 email = Email:
@@ -44,11 +45,15 @@ status = Status:
 active = Active
 inactive = In-Active
 dateStatusUpdated = Date Status Updated:
+workerIdNumericalError = Worker ID must be a numerical value.
+workerIdRangeError = Worker ID must be 9 digits in length.
+enterWorkerIdError = Please enter a worker ID
 enterFirstNameError = Please Enter a First Name.
 enterLastNameError = Please Enter a Last Name.
 enterEmailError = Please Enter an Email Address.
 phoneFormatError = Please enter a phone number in the format "xxx-xxx-xxxx".
 phoneNumericalError = Phone Field Must be a Numerical Value.
+enterPasswordError = Please enter a password.
 regDateError = Please enter a date of initial registration.
 regDateNumericalError = Date of initial registration must be a numerical value.
 dateYearLengthError = 'Year' field in registration date cannot exceed 4 characters.
