Made changes to fix worker view, Created messages strings for errors

--- a/BikeRental/src/MessagesBundle_en_US.properties
+++ b/BikeRental/src/MessagesBundle_en_US.properties
@@ -45,6 +45,8 @@ status = Status:
 active = Active
 inactive = In-Active
 dateStatusUpdated = Date Status Updated:
+InsertUsers = Insert Users
+userType = User Type
 workerIdNumericalError = Worker ID must be a numerical value.
 workerIdRangeError = Worker ID must be 9 digits in length.
 enterWorkerIdError = Please enter a worker ID
@@ -54,16 +56,24 @@ enterEmailError = Please Enter an Email Address.
 phoneFormatError = Please enter a phone number in the format "xxx-xxx-xxxx".
 phoneNumericalError = Phone Field Must be a Numerical Value.
 enterPasswordError = Please enter a password.
-regDateError = Please enter a date of initial registration.
+regDateError = Please fill out all fields for the date of initial registration.
 regDateNumericalError = Date of initial registration must be a numerical value.
-dateYearLengthError = 'Year' field in registration date cannot exceed 4 characters.
-dateMonthLengthError = 'Month' field in date of birth cannot exceed 2 characters.
-dateDayLengthError = 'Day' field in date of birth cannot exceed 2 characters.
-dateMonthRangeError = 'Month' field in date of birth must be between 1 and 12.
-dateDayRangeError = 'Day' field in date of birth must be between 1 - 31.
-InsertUsers = Insert Users
-userType = User Type
+regDateYearLengthError = 'Year' field in registration date cannot exceed 4 characters.
+regDateMonthLengthError = 'Month' field in registration date cannot exceed 2 characters.
+regDateDayLengthError = 'Day' field in registration date cannot exceed 2 characters.
+regDateMonthRangeError = 'Month' field in registration date must be between 1 and 12.
+regDateDayRangeError = 'Day' field in registration date must be between 1 - 31.
 membershipExpire = Membership Expire Date
 enterUserError = Please enter a User
 userTypeError = Please enter type of user
 membershipExpireError = Please enter expire date
+
+//invalidprimarykeyexceptions
+multipleEntitiesFoundError = Multiple {0}'s matching {1}: {2} found.
+entityNotFoundError = {0} not found.
+entityInsertedSuccessfully = {0} data for {1}: {2} inserted successfully in database.
+entityUpdatedSuccessfully = {0} data for {1}: {2} updated successfully in database.
+errorInstallingEntity = Error installing {0} data in database.
+passwordMismatchError = Incorrect password entered.
+passwordMissing = Password Missing.
+
