--- a/BikeRental/src/MessagesBundle_en_US.properties
+++ b/BikeRental/src/MessagesBundle_en_US.properties
@@ -56,6 +56,14 @@ enterEmailError = Please Enter an Email Address.
 phoneFormatError = Please enter a phone number in the format "xxx-xxx-xxxx".
 phoneNumericalError = Phone Field Must be a Numerical Value.
 enterPasswordError = Please enter a password.
+membershipExpire = Membership Expire Date
+memExpireDateError = Please fill out all fields for the date of membership expire date.
+memExpireDateNumericalError = Date of member expiry must be a numerical value.
+memExpireDateYearLengthError = 'Year' field in date of member expiry cannot exceed 4 characters.
+memExpireMonthLengthError = 'Month' field in date of member expiry cannot exceed 2 characters.
+memExpireDayLengthError = 'Day' field in date of member expiry cannot exceed 2 characters.
+memExpireMonthRangeError = 'Month' field in date of member expiry must be between 1 and 12.
+memExpireDayRangeError = 'Day' field in date of member expiry must be between 1 - 31.
 regDateError = Please fill out all fields for the date of initial registration.
 regDateNumericalError = Date of initial registration must be a numerical value.
 regDateYearLengthError = 'Year' field in registration date cannot exceed 4 characters.
@@ -63,7 +71,6 @@ regDateMonthLengthError = 'Month' field in registration date cannot exceed 2 cha
 regDateDayLengthError = 'Day' field in registration date cannot exceed 2 characters.
 regDateMonthRangeError = 'Month' field in registration date must be between 1 and 12.
 regDateDayRangeError = 'Day' field in registration date must be between 1 - 31.
-membershipExpire = Membership Expire Date
 enterUserError = Please enter a User
 userTypeError = Please enter type of user
 membershipExpireError = Please enter expire date
@@ -77,3 +84,7 @@ errorInstallingEntity = Error installing {0} data in database.
 passwordMismatchError = Incorrect password entered.
 passwordMissing = Password Missing.
 
+
+
+student = Student
+faculty = Faculty
