--- a/BikeRental/src/MessagesBundle_fr_FR.properties
+++ b/BikeRental/src/MessagesBundle_fr_FR.properties
@@ -1,15 +1,18 @@
-userId = Identifiant
+userId = Identifiant :
 password = Mot de passe
 submit = Soumettre
 cancel = Quitter
 logout = Déconnexion
+done = Terminer
 brockportTitle = THE COLLEGE AT BROCKPORT
 fastTracksTitle = Location de Vélos
 transChoiceSubTitle = Système de gestion de location
+AddWorkerTitle = Ajouter un nouvel employé
 greetingTemplate = Vous etes connecté comme {0},{1} ({2}). Vous avez les privilèges {3}
 enterUserIDErrorMessage = Merci d'entrer un identifiant
 checkinButton = Connexion
 checkoutButton = Déconnexion
+add = Ajouter
 AddVehicleTitle = Ajouter un véhicule
 VehicleMake = Marque :
 VehicleModelNum = Numéro de modele :
@@ -20,7 +23,6 @@ VehicleLocation = Location :
 VehiclePhysicalCondition = État :
 VehicleStatus = Status :
 VehicleDateStatus = Date de mise a jour du status :
-add = Ajouter
 user = Utilisateur
 worker = Employé
 bike = Vélo
@@ -28,3 +30,44 @@ Find/Modify = "Chercher/Modifier"
 passwordMismatch = Erreur: Mot de passe invalide
 passwordMissing = Erreur: Mot de passe manquant
 userNotFound = Erreur: L'utilisateur n'existe pas
+workerId = Identifiant d'employé
+firstName = Prénom :
+lastName = Nom de Famille :
+email = Email :
+phone = Téléphone
+credential =
+administrator = Administrateur
+dateOfInitialReg = Date d'enregistrement :
+notes = Notes :
+status = Status :
+active = Active
+inactive = Inactif
+dateStatusUpdated = Date de mise a jour du status
+InsertUsers = Ajout d'utilisateurs
+userType = Type d'utilisateur
+workerIdNumericalError = L'ID doit etre une valeur numérique.
+workerIdRangeError = L'ID doit etre compose de 9 chiffres.
+enterWorkerIdError = Merci d'entrer un identifiant d'employé.
+enterFirstNameError = Merci d'entrer un prenom.
+enterLastNameError = Merci d'entrer un nom de famille.
+enterEmailError = Merci d'entrer une adresse email.
+phoneFormatError = Merci d'entrer un numero de téléphone au format : "xxx-xxx-xxxx".
+phoneNumericalError = Le numéro de téléphone  doit etre une valeur numérique.
+enterPasswordError = Merci d'entrer un mot de passe.
+regDateError = Merci de remplir tous les champs pour la data d'enregistrement.
+regDateYearLengthError = L'année ne peut pas dépasser 4 chiffres.
+regDateDayLengthError = Le jour ne peut pas dépasser 2 chiffres.
+regDateMonthRangeError = Le mois doit etre compris entre 1 et 12.
+regDateDayRangeError = Le jour doit etre compris entre 1 et 31.
+membershipExpire = Date d'expiration
+enterUserError = Merci d'entrer un utilisateur
+userTypeError = Merci d'entrer un type d'utilisateur
+membershipExpireError = Merci d'entrer une date d'expiration.
+
+multipleEntitiesFoundError = Plusieurs {0} répondant a {1}: {2} trouvés.
+entityNotFoundError = {0} non trouvé
+entityInsertedSuccessfully = {0} : {1} inséré avec succès dans la base de données
+entityUpdatedSuccessfully = {0} : {1} mis a jour avec succès dans la base de données
+errorInstallingEntity = Erreur lors de l'insertion de {0} en base de données
+passwordMismatchError = Mot de passe invalide
+
