fix encoding issue and finish translations

--- a/BikeRental/src/MessagesBundle_fr_FR.properties
+++ b/BikeRental/src/MessagesBundle_fr_FR.properties
@@ -70,4 +70,16 @@ entityInsertedSuccessfully = {0} : {1} inséré avec succès dans la base de don
 entityUpdatedSuccessfully = {0} : {1} mis a jour avec succès dans la base de données
 errorInstallingEntity = Erreur lors de l'insertion de {0} en base de données
 passwordMismatchError = Mot de passe invalide
+memExpireDateError=Merci de remplir tous les champs pour la date d'expiration.
+memExpireDateNumericalError=La date doit etre une valeur numerique.
+memExpireDateYearLengthError=L'année ne peux pas depasser 4 caractères.
+memExpireMonthLengthError=Le mois ne peut pas dépasser 2 caractères.
+memExpireDayLengthError=Le jour ne peut pas dépasser 2 caractères.
+memExpireMonthRangeError=Le mois doit etre compris entre 1 et 12.
+memExpireDayRangeError=Le jour doit etre compris entre 1 et 31.
+regDateNumericalError=La date d'enrigistrement doit etre une valeur numérique.
+regDateMonthLengthError=Le mois ne peut pas dépasser 2 caractères.
+//invalidprimarykeyexceptions=
+student=Etudiant
+faculty=Faculté
 
