--- a/BikeRental/src/MessagesBundle_en_US.properties
+++ b/BikeRental/src/MessagesBundle_en_US.properties
@@ -80,7 +80,13 @@ entityInsertedSuccessfully = {0} data for {1}: {2} inserted successfully in data
 entityUpdatedSuccessfully = {0} data for {1}: {2} updated successfully in database.
 errorInstallingEntity = Error installing {0} data in database.
 passwordMismatchError = Incorrect password entered.
+passwordMissing = Password Missing.
 
+VehicleMakeError = Please enter a make.
+VehicleModelNumError = Please enter a model number.
+VehicleSerialNumError = Please enter a serial number.
+VehicleColorError = Please select a color.
+VehicleLocationError = Please enter a location.
 
 
 student = Student
