finaly fix encoding

--- a/BikeRental/src/MessagesBundle_fr_FR.properties
+++ b/BikeRental/src/MessagesBundle_fr_FR.properties
@@ -2,39 +2,39 @@ userId = Identifiant :
 password = Mot de passe
 submit = Soumettre
 cancel = Quitter
-logout = DÃ©connexion
+logout = Déconnexion
 done = Terminer
 brockportTitle = THE COLLEGE AT BROCKPORT
-fastTracksTitle = Location de VÃ©los
-transChoiceSubTitle = SystÃ¨me de gestion de location
-AddWorkerTitle = Ajouter un nouvel employÃ©
-greetingTemplate = Vous etes connectÃ© comme {0},{1} ({2}). Vous avez les privilÃ¨ges {3}
+fastTracksTitle = Location de Vélos
+transChoiceSubTitle = Système de gestion de location
+AddWorkerTitle = Ajouter un nouvel employé
+greetingTemplate = Vous etes connecté comme {0},{1} ({2}). Vous avez les privilèges {3}
 enterUserIDErrorMessage = Merci d'entrer un identifiant
 checkinButton = Connexion
-checkoutButton = DÃ©connexion
+checkoutButton = Déconnexion
 add = Ajouter
-AddVehicleTitle = Ajouter un vÃ©hicule
+AddVehicleTitle = Ajouter un véhicule
 VehicleMake = Marque :
-VehicleModelNum = NumÃ©ro de modele :
-VehicleSerialNum = NumÃ©ro de serie :
+VehicleModelNum = Numéro de modele :
+VehicleSerialNum = Numéro de serie :
 VehicleColor = Couleur :
 VehicleDescription = Description :
 VehicleLocation = Location :
-VehiclePhysicalCondition = Ã‰tat :
+VehiclePhysicalCondition = État :
 VehicleStatus = Status :
 VehicleDateStatus = Date de mise a jour du status :
 user = Utilisateur
-worker = EmployÃ©
-bike = VÃ©lo
+worker = Employé
+bike = Vélo
 Find/Modify = "Chercher/Modifier"
 passwordMismatch = Erreur: Mot de passe invalide
 passwordMissing = Erreur: Mot de passe manquant
 userNotFound = Erreur: L'utilisateur n'existe pas
-workerId = Identifiant d'employÃ©
-firstName = PrÃ©nom :
+workerId = Identifiant d'employé
+firstName = Prénom :
 lastName = Nom de Famille :
 email = Email :
-phone = TÃ©lÃ©phone
+phone = Téléphone
 credential =
 administrator = Administrateur
 dateOfInitialReg = Date d'enregistrement :
@@ -45,18 +45,18 @@ inactive = Inactif
 dateStatusUpdated = Date de mise a jour du status
 InsertUsers = Ajout d'utilisateurs
 userType = Type d'utilisateur
-workerIdNumericalError = L'ID doit etre une valeur numÃ©rique.
+workerIdNumericalError = L'ID doit etre une valeur numérique.
 workerIdRangeError = L'ID doit etre compose de 9 chiffres.
-enterWorkerIdError = Merci d'entrer un identifiant d'employÃ©.
+enterWorkerIdError = Merci d'entrer un identifiant d'employé.
 enterFirstNameError = Merci d'entrer un prenom.
 enterLastNameError = Merci d'entrer un nom de famille.
 enterEmailError = Merci d'entrer une adresse email.
-phoneFormatError = Merci d'entrer un numero de tÃ©lÃ©phone au format : "xxx-xxx-xxxx".
-phoneNumericalError = Le numÃ©ro de tÃ©lÃ©phone  doit etre une valeur numÃ©rique.
+phoneFormatError = Merci d'entrer un numero de téléphone au format : "xxx-xxx-xxxx".
+phoneNumericalError = Le numéro de téléphone  doit etre une valeur numérique.
 enterPasswordError = Merci d'entrer un mot de passe.
 regDateError = Merci de remplir tous les champs pour la data d'enregistrement.
-regDateYearLengthError = L'annÃ©e ne peut pas dÃ©passer 4 chiffres.
-regDateDayLengthError = Le jour ne peut pas dÃ©passer 2 chiffres.
+regDateYearLengthError = L'année ne peut pas dépasser 4 chiffres.
+regDateDayLengthError = Le jour ne peut pas dépasser 2 chiffres.
 regDateMonthRangeError = Le mois doit etre compris entre 1 et 12.
 regDateDayRangeError = Le jour doit etre compris entre 1 et 31.
 membershipExpire = Date d'expiration
@@ -64,22 +64,22 @@ enterUserError = Merci d'entrer un utilisateur
 userTypeError = Merci d'entrer un type d'utilisateur
 membershipExpireError = Merci d'entrer une date d'expiration.
 
-multipleEntitiesFoundError = Plusieurs {0} rÃ©pondant a {1}: {2} trouvÃ©s.
-entityNotFoundError = {0} non trouvÃ©
-entityInsertedSuccessfully = {0} : {1} insÃ©rÃ© avec succÃ¨s dans la base de donnÃ©es
-entityUpdatedSuccessfully = {0} : {1} mis a jour avec succÃ¨s dans la base de donnÃ©es
-errorInstallingEntity = Erreur lors de l'insertion de {0} en base de donnÃ©es
+multipleEntitiesFoundError = Plusieurs {0} répondant a {1}: {2} trouvés.
+entityNotFoundError = {0} non trouvé
+entityInsertedSuccessfully = {0} : {1} inséré avec succès dans la base de données
+entityUpdatedSuccessfully = {0} : {1} mis a jour avec succès dans la base de données
+errorInstallingEntity = Erreur lors de l'insertion de {0} en base de données
 passwordMismatchError = Mot de passe invalide
 memExpireDateError=Merci de remplir tous les champs pour la date d'expiration.
 memExpireDateNumericalError=La date doit etre une valeur numerique.
-memExpireDateYearLengthError=L'annÃ©e ne peux pas depasser 4 caractÃ¨res.
-memExpireMonthLengthError=Le mois ne peut pas dÃ©passer 2 caractÃ¨res.
-memExpireDayLengthError=Le jour ne peut pas dÃ©passer 2 caractÃ¨res.
+memExpireDateYearLengthError=L'année ne peux pas depasser 4 caractères.
+memExpireMonthLengthError=Le mois ne peut pas dépasser 2 caractères.
+memExpireDayLengthError=Le jour ne peut pas dépasser 2 caractères.
 memExpireMonthRangeError=Le mois doit etre compris entre 1 et 12.
 memExpireDayRangeError=Le jour doit etre compris entre 1 et 31.
-regDateNumericalError=La date d'enrigistrement doit etre une valeur numÃ©rique.
-regDateMonthLengthError=Le mois ne peut pas dÃ©passer 2 caractÃ¨res.
+regDateNumericalError=La date d'enrigistrement doit etre une valeur numérique.
+regDateMonthLengthError=Le mois ne peut pas dépasser 2 caractères.
 //invalidprimarykeyexceptions=
 student=Etudiant
-faculty=FacultÃ©
+faculty=Faculté
 
