--- a/BikeRental/src/MessagesBundle_en_US.properties
+++ b/BikeRental/src/MessagesBundle_en_US.properties
@@ -5,7 +5,7 @@ cancel = Cancel
 done = Done
 logout = Log Out
 brockportTitle = THE COLLEGE AT BROCKPORT
-fastTracksTitle = FastTracks Bicycle Rentals
+fastTracksTitle = FastTRAX Bicycle Rentals
 transChoiceSubTitle = RENTAL MANAGEMENT SYSTEM
 AddWorkerTitle = Add New Worker
 greetingTemplate = You are logged in as: {0}, {1} ({2}). You have {3} credentials.
@@ -91,3 +91,15 @@ VehicleLocationError = Please enter a location.
 
 student = Student
 faculty = Faculty
+
+//colors
+red = Red
+blue = Blue
+green = Green
+yellow = Yellow
+black = Black
+white = White
+gray = Gray
+pink = Pink
+purple = Purple
+orange = Orange
