added space on login screen changed "submit" button to "Log In" on login screen
Need "colors" to get translated into french in french resource bundle

--- a/BikeRental/src/MessagesBundle_en_US.properties
+++ b/BikeRental/src/MessagesBundle_en_US.properties
@@ -3,6 +3,7 @@ password = Password :
 submit = Submit
 cancel = Cancel
 done = Done
+login = Log In
 logout = Log Out
 brockportTitle = THE COLLEGE AT BROCKPORT
 fastTracksTitle = FastTRAX Bicycle Rentals
