--- a/BikeRental/src/MessagesBundle_fr_FR.properties
+++ b/BikeRental/src/MessagesBundle_fr_FR.properties
@@ -83,3 +83,14 @@ regDateMonthLengthError=Le mois ne peut pas dépasser 2 caractères.
 student=Etudiant
 faculty=Faculté
 
+//colors
+red = Red
+blue = Blue
+green = Green
+yellow = Yellow
+black = Black
+white = White
+gray = Gray
+pink = Pink
+purple = Purple
+orange = Orange
