translate colors in french

--- a/BikeRental/src/MessagesBundle_fr_FR.properties
+++ b/BikeRental/src/MessagesBundle_fr_FR.properties
@@ -84,13 +84,13 @@ student=Etudiant
 faculty=Faculté
 
 //colors
-red = Red
-blue = Blue
-green = Green
-yellow = Yellow
-black = Black
-white = White
-gray = Gray
-pink = Pink
-purple = Purple
+red = Rouge
+blue = Bleu
+green = Vert
+yellow = Jaune
+black = Noir
+white = Blanc
+gray = Gris
+pink = Rose
+purple = Violet
 orange = Orange
