--- a/BikeRental/src/MessagesBundle_fr_FR.properties
+++ b/BikeRental/src/MessagesBundle_fr_FR.properties
@@ -1,11 +1,12 @@
 userId = Identifiant :
-password = Mot de passe
+password = Mot de passe :
 submit = Soumettre
 cancel = Quitter
+login = Connexion
 logout = Déconnexion
 done = Terminer
 brockportTitle = THE COLLEGE AT BROCKPORT
-fastTracksTitle = Location de Vélos
+fastTracksTitle = Fast TRAX Bicycle Rentals
 transChoiceSubTitle = Système de gestion de location
 AddWorkerTitle = Ajouter un nouvel employé
 greetingTemplate = Vous etes connecté comme {0},{1} ({2}). Vous avez les privilèges {3}
