--- a/BikeRental/src/MessagesBundle_fr_FR.properties
+++ b/BikeRental/src/MessagesBundle_fr_FR.properties
@@ -96,7 +96,7 @@ pink = Rose
 purple = Violet
 orange = Orange
 
-mint = Mint
-good = Good
-satisfactory = Satisfactory
-poor = pooR
+mint = Neuf
+good = Bon
+satisfactory = Satisfaisant
+poor = Mauvais
