--- a/BikeRental/src/MessagesBundle_fr_FR.properties
+++ b/BikeRental/src/MessagesBundle_fr_FR.properties
@@ -41,7 +41,7 @@ administrator = Administrateur
 dateOfInitialReg = Date d'enregistrement :
 notes = Notes :
 status = Status :
-active = Active
+active = Actif
 inactive = Inactif
 dateStatusUpdated = Date de mise a jour du status
 InsertUsers = Ajout d'utilisateurs
