--- a/BikeRental/src/MessagesBundle_en_US.properties
+++ b/BikeRental/src/MessagesBundle_en_US.properties
@@ -1,4 +1,9 @@
+add_user = Add User
+addWorker = Add Worker
+addBike = Add Bike
+
 userId = User Id :
+login = Login
 password = Password :
 submit = Submit
 cancel = Cancel
@@ -15,10 +20,14 @@ checkoutButton = Check Out
 add = Add
 AddVehicleTitle = INSERT NEW VEHICLE
 VehicleMake = Make :
+make = make
 VehicleModelNum = Model Number :
+modelNum = Model Number
 VehicleSerialNum = Serial Number :
+serialNum = Serial Number
 VehicleColor = Color :
 VehicleDescription = Description :
+description = Description
 VehicleLocation = Location :
 VehiclePhysicalCondition = Physical Condition :
 VehicleStatus = Status :
@@ -35,10 +44,10 @@ firstName = First Name:
 lastName = Last Name:
 email = Email:
 phone = Phone:
-credential = Credential:
 administrator = Administrator
 dateOfInitialReg = Date Of Initial Registration:
 notes = Notes:
+back = Back
 status = Status:
 active = Active
 inactive = In-Active
@@ -80,7 +89,6 @@ entityInsertedSuccessfully = {0} data for {1}: {2} inserted successfully in data
 entityUpdatedSuccessfully = {0} data for {1}: {2} updated successfully in database.
 errorInstallingEntity = Error installing {0} data in database.
 passwordMismatchError = Incorrect password entered.
-passwordMissing = Password Missing.
 
 VehicleMakeError = Please enter a make.
 VehicleModelNumError = Please enter a model number.
@@ -88,6 +96,7 @@ VehicleSerialNumError = Please enter a serial number.
 VehicleColorError = Please select a color.
 VehicleLocationError = Please enter a location.
 
+credential = "Credential:"
 
 student = Student
 faculty = Faculty
