--- a/BikeRental/src/MessagesBundle_fr_FR.properties
+++ b/BikeRental/src/MessagesBundle_fr_FR.properties
@@ -1,11 +1,17 @@
-userId = Identifiant :
+add_user = Ajouter un utilisateur
+addWorker = Ajouter un employé
+addBike = Ajouter un Vélo
+
+
+userId = Identifiant
 password = Mot de passe
 submit = Soumettre
 cancel = Quitter
+login = Connexion
 logout = Déconnexion
 done = Terminer
-brockportTitle = THE COLLEGE AT BROCKPORT
-fastTracksTitle = Location de Vélos
+brockportTitle = The College At Brockport
+fastTracksTitle = Fast TRAX Bicycle Rentals
 transChoiceSubTitle = Système de gestion de location
 AddWorkerTitle = Ajouter un nouvel employé
 greetingTemplate = Vous etes connecté comme {0},{1} ({2}). Vous avez les privilèges {3}
@@ -15,10 +21,14 @@ checkoutButton = Déconnexion
 add = Ajouter
 AddVehicleTitle = Ajouter un véhicule
 VehicleMake = Marque :
-VehicleModelNum = Numéro de modele :
-VehicleSerialNum = Numéro de serie :
+make = Marque
+VehicleModelNum = Numéro de modéle :
+modelNum = Numéro de modéle
+VehicleSerialNum = Numéro de série :
+serialNum = Numéro de série
 VehicleColor = Couleur :
 VehicleDescription = Description :
+description = Description
 VehicleLocation = Location :
 VehiclePhysicalCondition = État :
 VehicleStatus = Status :
@@ -31,14 +41,18 @@ passwordMismatch = Erreur: Mot de passe invalide
 passwordMissing = Erreur: Mot de passe manquant
 userNotFound = Erreur: L'utilisateur n'existe pas
 workerId = Identifiant d'employé
-firstName = Prénom :
-lastName = Nom de Famille :
+name = Nom :
+firstName = Prénom
+lastName = Nom de Famille
 email = Email :
+country = Pays
+phoneNumber = Numéro de Téléphone :
 phone = Téléphone
 credential =
 administrator = Administrateur
 dateOfInitialReg = Date d'enregistrement :
 notes = Notes :
+back = Retour
 status = Status :
 active = Active
 inactive = Inactif
