Created popup message functionality and fixed broken code

--- a/BikeRental/src/MessagesBundle_en_US.properties
+++ b/BikeRental/src/MessagesBundle_en_US.properties
@@ -27,6 +27,7 @@ VehicleStatus = Status :
 VehicleDateStatus = Date of Status Update:
 user = User
 worker = Worker
+Worker = Worker
 bike = Bike
 Find/Modify = Find/Modify
 passwordMismatch = Error: Password mismatch
@@ -82,7 +83,6 @@ entityInsertedSuccessfully = {0} data for {1}: {2} inserted successfully in data
 entityUpdatedSuccessfully = {0} data for {1}: {2} updated successfully in database.
 errorInstallingEntity = Error installing {0} data in database.
 passwordMismatchError = Incorrect password entered.
-passwordMissing = Password Missing.
 
 VehicleMakeError = Please enter a make.
 VehicleModelNumError = Please enter a model number.
