javafx refactor seams ok

--- a/BikeRental/src/MessagesBundle_en_US.properties
+++ b/BikeRental/src/MessagesBundle_en_US.properties
@@ -30,6 +30,7 @@ VehicleColor = Color :
 VehicleDescription = Description :
 description = Description
 VehicleLocation = Location :
+location = Location
 VehiclePhysicalCondition = Physical Condition :
 VehicleStatus = Status :
 VehicleDateStatus = Date of Status Update:
@@ -41,10 +42,13 @@ passwordMismatch = Error: Password mismatch
 passwordMissing = Error: Password missing
 userNotFound = Error: user does not exist
 workerId = Worker ID:
+name = Name:
 firstName = First Name:
 lastName = Last Name:
 email = Email:
 phone = Phone:
+phoneNumber = Phone Number
+country = Country
 administrator = Administrator
 dateOfInitialReg = Date Of Initial Registration:
 notes = Notes:
@@ -113,6 +117,9 @@ gray = Gray
 pink = Pink
 purple = Purple
 orange = Orange
+
+available =  Available
+taken = Taken
 
 mint = Mint
 good = Good
