--- a/BikeRental/src/MessagesBundle_fr_FR.properties
+++ b/BikeRental/src/MessagesBundle_fr_FR.properties
@@ -32,6 +32,7 @@ VehicleColor = Couleur :
 VehicleDescription = Description :
 description = Description
 VehicleLocation = Location :
+location = Location
 VehiclePhysicalCondition = État :
 VehicleStatus = Status :
 VehicleDateStatus = Date de mise a jour du status :
@@ -110,6 +111,9 @@ gray = Gris
 pink = Rose
 purple = Violet
 orange = Orange
+
+available = Disponible
+taken = Pris
 
 mint = Neuf
 good = Bon
