--- a/BikeRental/src/MessagesBundle_fr_FR.properties
+++ b/BikeRental/src/MessagesBundle_fr_FR.properties
@@ -100,6 +100,8 @@ regDateMonthLengthError=Le mois ne peut pas dépasser 2 caractères.
 student=Etudiant
 faculty=Faculté
 
+dateFormat = dd/MM/yyyy
+
 //colors
 red = Rouge
 blue = Bleu
