fix some graphics and internationalization bugs

--- a/BikeRental/src/MessagesBundle_en_US.properties
+++ b/BikeRental/src/MessagesBundle_en_US.properties
@@ -122,6 +122,9 @@ orange = Orange
 available =  Available
 taken = Taken
 
+membership=Adhésion
+registration=Enregistrement
+
 mint = Mint
 good = Good
 satisfactory = Satisfactory
