--- a/BikeRental/src/MessagesBundle_fr_FR.properties
+++ b/BikeRental/src/MessagesBundle_fr_FR.properties
@@ -100,6 +100,9 @@ regDateMonthLengthError=Le mois ne peut pas dépasser 2 caractères.
 student=Etudiant
 faculty=Faculté
 
+membership=Expiration
+registration=Enregistrement
+
 dateFormat = dd/MM/yyyy
 
 //colors
