--- a/BikeRental/src/MessagesBundle_fr_FR.properties
+++ b/BikeRental/src/MessagesBundle_fr_FR.properties
@@ -100,3 +100,5 @@ mint = Neuf
 good = Bon
 satisfactory = Satisfaisant
 poor = Mauvais
+
+requireAdminCred = Fr: Administrator Credentials Required
