--- a/BikeRental/src/MessagesBundle_en_US.properties
+++ b/BikeRental/src/MessagesBundle_en_US.properties
@@ -12,8 +12,8 @@ transChoiceSubTitle = RENTAL MANAGEMENT SYSTEM
 AddWorkerTitle = Add New Worker
 greetingTemplate = You are logged in as: {0}, {1} ({2}). You have {3} credentials.
 enterUserIDErrorMessage = Please enter a user ID!
-checkinButton = Check In
-checkoutButton = Check Out
+checkinButton = Return
+checkoutButton = Rent
 add = Add
 AddVehicleTitle = INSERT NEW VEHICLE
 VehicleMake = Make :
