Changed "poor" to "Poor" in U.S Language package

--- a/BikeRental/src/MessagesBundle_en_US.properties
+++ b/BikeRental/src/MessagesBundle_en_US.properties
@@ -109,7 +109,7 @@ orange = Orange
 mint = Mint
 good = Good
 satisfactory = Satisfactory
-poor = poor
+poor = Poor
 
 
 requireAdminCred = "Administrator Credentials Required"
