add auth for add user and worker page

--- a/BikeRental/src/MessagesBundle_en_US.properties
+++ b/BikeRental/src/MessagesBundle_en_US.properties
@@ -122,10 +122,13 @@ orange = Orange
 available =  Available
 taken = Taken
 
-membership=Adhésion
-registration=Enregistrement
+membership=Membership
+registration=Registration
 
 mint = Mint
 good = Good
 satisfactory = Satisfactory
 poor = poor
+
+needAdmin = This page require admin credentials
+
