created JDatePicker and started to implement DBContent Strategy in views

--- a/BikeRental/src/MessagesBundle_en_US.properties
+++ b/BikeRental/src/MessagesBundle_en_US.properties
@@ -54,8 +54,8 @@ enterWorkerIdError = Please enter a worker ID
 enterFirstNameError = Please Enter a First Name.
 enterLastNameError = Please Enter a Last Name.
 enterEmailError = Please Enter an Email Address.
-phoneFormatError = Please enter a phone number in the format "xxx-xxx-xxxx".
-phoneNumericalError = Phone Field Must be a Numerical Value.
+phoneFormatError = Please enter a valid numerical phone number(at most 15 digits) including a (0-5 digit) country code.
+phoneNumericalError = Phone Field's Must be Numerical Values.
 enterPasswordError = Please enter a password.
 membershipExpire = Membership Expire Date
 memExpireDateError = Please fill out all fields for the date of membership expire date.
@@ -65,13 +65,8 @@ memExpireMonthLengthError = 'Month' field in date of member expiry cannot exceed
 memExpireDayLengthError = 'Day' field in date of member expiry cannot exceed 2 characters.
 memExpireMonthRangeError = 'Month' field in date of member expiry must be between 1 and 12.
 memExpireDayRangeError = 'Day' field in date of member expiry must be between 1 - 31.
-regDateError = Please fill out all fields for the date of initial registration.
-regDateNumericalError = Date of initial registration must be a numerical value.
-regDateYearLengthError = 'Year' field in registration date cannot exceed 4 characters.
-regDateMonthLengthError = 'Month' field in registration date cannot exceed 2 characters.
-regDateDayLengthError = 'Day' field in registration date cannot exceed 2 characters.
-regDateMonthRangeError = 'Month' field in registration date must be between 1 and 12.
-regDateDayRangeError = 'Day' field in registration date must be between 1 - 31.
+selectRegDateError = Please select a registration date.
+selectMemExpireDateError = Please select a membership expiration date.
 enterUserError = Please enter a User
 userTypeError = Please enter type of user
 membershipExpireError = Please enter expire date
