--- a/BikeRental/src/MessagesBundle_fr_FR.properties
+++ b/BikeRental/src/MessagesBundle_fr_FR.properties
@@ -102,3 +102,5 @@ satisfactory = Satisfaisant
 poor = Mauvais
 
 requireAdminCred = Fr: Administrator Credentials Required
+
+titleLine = "need french translation"
