Change user Interface for reg/expire date box

--- a/BikeRental/src/MessagesBundle_en_US.properties
+++ b/BikeRental/src/MessagesBundle_en_US.properties
@@ -47,7 +47,7 @@ active = Active
 inactive = In-Active
 dateStatusUpdated = Date Status Updated:
 InsertUsers = Insert Users
-userType = User Type
+userType = User Type:
 workerIdNumericalError = Worker ID must be a numerical value.
 workerIdRangeError = Worker ID must be 9 digits in length.
 enterWorkerIdError = Please enter a worker ID
@@ -57,7 +57,7 @@ enterEmailError = Please Enter an Email Address.
 phoneFormatError = Please enter a valid numerical phone number(at most 15 digits) including a (0-5 digit) country code.
 phoneNumericalError = Phone Field's Must be Numerical Values.
 enterPasswordError = Please enter a password.
-membershipExpire = Membership Expire Date
+membershipExpire = Membership Expire Date:
 memExpireDateError = Please fill out all fields for the date of membership expire date.
 memExpireDateNumericalError = Date of member expiry must be a numerical value.
 memExpireDateYearLengthError = 'Year' field in date of member expiry cannot exceed 4 characters.
