Resized some views Cleaned up BikeTransView a little

--- a/BikeRental/src/MessagesBundle_fr_FR.properties
+++ b/BikeRental/src/MessagesBundle_fr_FR.properties
@@ -13,6 +13,13 @@ greetingTemplate = Vous etes connecté comme {0},{1} ({2}). Vous avez les privilè
 enterUserIDErrorMessage = Merci d'entrer un identifiant
 checkinButton = Connexion
 checkoutButton = Déconnexion
+
+rentButton = Rent
+returnButton = Return
+addUserButton = Add User
+addWorkerButton = Add Worker
+addBikeButton = Add Bike
+
 add = Ajouter
 AddVehicleTitle = Ajouter un véhicule
 VehicleMake = Marque :
