Had to fix administrator validation in trans choice view

--- a/BikeRental/src/MessagesBundle_en_US.properties
+++ b/BikeRental/src/MessagesBundle_en_US.properties
@@ -107,6 +107,6 @@ satisfactory = Satisfactory
 poor = Poor
 
 
-requireAdminCred = "Administrator Credentials Required"
+requireAdminCred = Administrator Credentials Required
 
 back = Back
