--- a/BikeRental/src/MessagesBundle_fr_FR.properties
+++ b/BikeRental/src/MessagesBundle_fr_FR.properties
@@ -108,6 +108,7 @@ good = Bon
 satisfactory = Satisfaisant
 poor = Mauvais
 
-requireAdminCred = Fr: Administrator Credentials Required
+requireAdminCred = De vérification des pouvoirs de l'administrateur nécessaire
 
-titleLine = "need french translation"
+titleLine = Location de vélos système v1.0
+back = Arrière
