add subtitle on menu page

--- a/BikeRental/src/MessagesBundle_en_US.properties
+++ b/BikeRental/src/MessagesBundle_en_US.properties
@@ -14,7 +14,7 @@ brockportTitle = THE COLLEGE AT BROCKPORT
 fastTracksTitle = Fast TRAX Bicycle Rentals
 transChoiceSubTitle = RENTAL MANAGEMENT SYSTEM
 AddWorkerTitle = Add New Worker
-greetingTemplate = You are logged in as: {0}, {1} ({2}). You have {3} credentials.
+greetingTemplate = You are logged in as: {0} {1}. You have {2} credentials.
 enterUserIDErrorMessage = Please enter a user ID!
 checkinButton = Check In
 checkoutButton = Check Out
