--- a/BikeRental/src/MessagesBundle_fr_FR.properties
+++ b/BikeRental/src/MessagesBundle_fr_FR.properties
@@ -5,8 +5,6 @@ addBike = Ajouter un Vélo
 
 userId = Identifiant
 password = Mot de passe
-userId = Identifiant :
-password = Mot de passe :
 submit = Soumettre
 cancel = Quitter
 login = Connexion
@@ -16,7 +14,7 @@ brockportTitle = The College At Brockport
 fastTracksTitle = Fast TRAX Bicycle Rentals
 transChoiceSubTitle = Système de gestion de location
 AddWorkerTitle = Ajouter un nouvel employé
-greetingTemplate = Vous etes connecté comme {0},{1} ({2}). Vous avez les privilèges {3}
+greetingTemplate = Vous etes connecté comme {0} {1}. Vous avez les privilèges {2}
 enterUserIDErrorMessage = Merci d'entrer un identifiant
 checkinButton = Connexion
 checkoutButton = Déconnexion
@@ -51,7 +49,7 @@ email = Email :
 country = Pays
 phoneNumber = Numéro de Téléphone :
 phone = Téléphone
-credential =
+credential = Autorisation
 administrator = Administrateur
 dateOfInitialReg = Date d'enregistrement :
 notes = Notes :
