some fixes in translations

--- a/BikeRental/src/MessagesBundle_fr_FR.properties
+++ b/BikeRental/src/MessagesBundle_fr_FR.properties
@@ -14,17 +14,17 @@ enterUserIDErrorMessage = Merci d'entrer un identifiant
 checkinButton = Connexion
 checkoutButton = Déconnexion
 
-rentButton = Rent
-returnButton = Return
-addUserButton = Add User
-addWorkerButton = Add Worker
-addBikeButton = Add Bike
+rentButton = Louer
+returnButton = Retours
+addUserButton = Ajouter un utilisateur
+addWorkerButton = Ajouter un employé
+addBikeButton = Ajouter un Vélo
 
 add = Ajouter
 AddVehicleTitle = Ajouter un véhicule
 VehicleMake = Marque :
-VehicleModelNum = Numéro de modele :
-VehicleSerialNum = Numéro de serie :
+VehicleModelNum = Numéro de modèle :
+VehicleSerialNum = Numéro de série :
 VehicleColor = Couleur :
 VehicleDescription = Description :
 VehicleLocation = Location :
@@ -108,7 +108,7 @@ good = Bon
 satisfactory = Satisfaisant
 poor = Mauvais
 
-requireAdminCred = De vérification des pouvoirs de l'administrateur nécessaire
+requireAdminCred = Il faut être administrateur.
 
-titleLine = Location de vélos système v1.0
-back = Arrière
+titleLine = Location de vélos v1.0
+back = Retours
