created JDatePicker and started to implement DBContent Strategy in views

--- a/BikeRental/src/MessagesBundle_en_US.properties
+++ b/BikeRental/src/MessagesBundle_en_US.properties
@@ -10,6 +10,7 @@ brockportTitle = THE COLLEGE AT BROCKPORT
 fastTracksTitle = Fast TRAX Bicycle Rentals
 transChoiceSubTitle = RENTAL MANAGEMENT SYSTEM
 AddWorkerTitle = Add New Worker
+AddRentalTitle = Process New Rental
 greetingTemplate = You are logged in as: {0}, {1} ({2}). You have {3} credentials.
 enterUserIDErrorMessage = Please enter a user ID!
 checkinButton = Return
@@ -110,3 +111,12 @@ poor = Poor
 requireAdminCred = Administrator Credentials Required
 
 back = Back
+
+rentalID = Rental ID
+vehicleID = Vehicle ID
+renterID = Renter ID
+dateRented = Date Rented
+dateDue = Date Due
+dateReturned = Date Returned
+checkoutWorkerID = Check-Out Worker ID
+checkinWorkerID = Check-In Worker ID
