created JDatePicker and started to implement DBContent Strategy in views

--- a/BikeRental/src/MessagesBundle_en_US.properties
+++ b/BikeRental/src/MessagesBundle_en_US.properties
@@ -17,6 +17,7 @@ checkinButton = Return
 checkoutButton = Rent
 add = Add
 AddVehicleTitle = INSERT NEW VEHICLE
+rentalTitle = Return Bike
 VehicleMake = Make :
 VehicleModelNum = Model Number :
 VehicleSerialNum = Serial Number :
@@ -120,3 +121,5 @@ dateDue = Date Due
 dateReturned = Date Returned
 checkoutWorkerID = Check-Out Worker ID
 checkinWorkerID = Check-In Worker ID
+
+noActiveRentalsFound = No active rentals found in database.
