created JDatePicker and started to implement DBContent Strategy in views

--- a/BikeRental/src/MessagesBundle_en_US.properties
+++ b/BikeRental/src/MessagesBundle_en_US.properties
@@ -123,3 +123,6 @@ checkoutWorkerID = Check-Out Worker ID
 checkinWorkerID = Check-In Worker ID
 
 noActiveRentalsFound = No active rentals found in database.
+
+returnSuccessful = Return was processed successfully.
+returnUnSuccessful = Return was not processed successfully.
